examples/test/testpolicy11165.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11165
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key23: value32
      key25: value45
      key39: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value32
      podSelector:
        matchLabels:
          key32: value19
